tests/spec/fail/fs_write_non_string_path.aja
import (
    "fs"
)

print(fs.write(1, "x"))
